<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/colorPrimaryDark"
android:orientation="horizontal">

<ImageView
    android:id="@+id/country_flag_image_view"
    android:visibility="invisible"
    android:layout_width="@dimen/flag_image_width"
    android:layout_height="@dimen/flag_image_height"
    android:layout_marginBottom="@dimen/standard_vertical_margin"
    android:layout_marginLeft="@dimen/standard_horizontal_margin"
    android:layout_marginStart="@dimen/standard_horizontal_margin"
    android:layout_marginTop="@dimen/standard_vertical_margin"
    android:src="@drawable/ic_flag_of_the_united_states"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/name_country"
    android:text="@string/headingCountry"
    android:textSize="@dimen/text_heading"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:layout_width="@dimen/country_text_width"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_vertical_margin"
    android:layout_marginLeft="@dimen/standard_horizontal_margin"
    android:layout_marginStart="@dimen/standard_horizontal_margin"
    android:layout_marginTop="@dimen/standard_vertical_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/golds_country"
    app:layout_constraintStart_toEndOf="@+id/country_flag_image_view"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/golds_country"
    android:text="@string/headingGold"
    android:textSize="@dimen/text_heading"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:layout_width="@dimen/gold_text_width"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_vertical_margin"
    android:layout_marginLeft="@dimen/standard_horizontal_margin"
    android:layout_marginStart="@dimen/standard_horizontal_margin"
    android:layout_marginTop="@dimen/standard_vertical_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/silvers_country"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/imageArrowView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:layout_marginBottom="@dimen/standard_vertical_margin"
    android:layout_marginLeft="@dimen/standard_horizontal_margin"
    android:layout_marginStart="@dimen/standard_horizontal_margin"
    android:layout_marginTop="@dimen/standard_vertical_margin"
    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/silvers_country"
    android:text="@string/headingSilver"
    android:textSize="@dimen/text_heading"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:layout_width="@dimen/silver_text_width"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_vertical_margin"
    android:layout_marginLeft="@dimen/standard_horizontal_margin"
    android:layout_marginStart="@dimen/standard_horizontal_margin"
    android:layout_marginTop="@dimen/standard_vertical_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/bronzes_country"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/bronzes_country"
    android:text="@string/headingBronze"
    android:textSize="@dimen/text_heading"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:layout_width="@dimen/bronze_text_width"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_vertical_margin"
    android:layout_marginLeft="@dimen/standard_horizontal_margin"
    android:layout_marginStart="@dimen/standard_horizontal_margin"
    android:layout_marginTop="@dimen/standard_vertical_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/imageArrowView"
    app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>